# visualblocks

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  test.txt
.github/workflows/: ci.yml  custom_nodes_ci.yml  process-pipelines.yml  process.py  testscript.yml
custom_nodes/: .gitignore  .prettierrc.json  DEVELOPMENT.md  README.md  package-lock.json  package.json  pipelines_index.json  turbo.json
custom_nodes/.changeset/: brave-tips-sit.md  chilled-rings-brake.md  neat-melons-beam.md  olive-windows-lie.md  ten-suits-agree.md
custom_nodes/types/: README.md  package-lock.json  package.json
examples/: quick_start.ipynb  quick_start_cartoonization.ipynb  quick_start_style_transfer.ipynb  style_transfer.ipynb
pipelines/: 3dphoto_portrait_depth.json  README.md  ar_sticker_effect.json  cartoongan.json  palm2_email_generation_review.json  palm2_weather_summarizer.json  pipelines_index.json
pipelines/3dphoto_portrait_depth/: 3dphoto_portrait_depth.json
pipelines/ar_sticker_effect/: ar_sticker_effect.json
pipelines/cartoon_gan/: cartoon_gan.json
pipelines/color_pop/: color_pop.json
pipelines/gemini_email_generation_review/: gemini_email_generation_and_review.json
pipelines/gemini_manuscript_helper/: gemini_manuscript_helper.json
pipelines/gemini_title_generator/: gemini_title_generator.json
pipelines/graphics/: 3dphoto_portrait_depth.json  3dphoto_portrait_depth.txt  cartoongan.json  (+3 more)
python/: .editorconfig  README.pypi.md  pyproject.toml
python/src/visual_blocks/: server.py
python/src/visualblocks/: __init__.py  server.py
scripts/: package  upload
(+62 files in other folders)
