[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "visualblocks"
version = "0.0.2"
authors = [
  { name="Google LLC", email="opensource@google.com" },
]
description = "Visual Blocks for Google Colaboratory"
readme = "README.pypi.md"
requires-python = ">=3.7"
classifiers = [
  "Environment :: Other Environment",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "Flask",
  "google-colab",
  "ipython",
  "portpicker",
]

[project.urls]
"Homepage" = "https://github.com/google/visualblocks"
"Bug Tracker" = "https://github.com/google/visualblocks/issues"
